Håndtere værdata fra Yr, bynavn og async innhenting av data.