@@ -8,7 +8,9 @@ import org.json.JSONObject;
 import java.io.BufferedReader;
 import java.io.InputStreamReader;
 import java.net.HttpURLConnection;
+import java.net.URI;
 import java.net.URL;
+import java.net.URLEncoder;
 
 /**
  * Created by thomasqvidahl on 18.05.2017.
@@ -21,14 +23,17 @@ class RemoteFetch {
 
     public static JSONArray getJSON(Context context, String city) {
 
+
         try {
-            URL url = new URL(String.format(YR_WEBSOK_URL, city));
+            URI uri = new URI("http", null, "www.yr.no", -1, "/_/websvc/jsonforslagsboks.aspx", String.format("s=%s", city), null);
+
+            URL url = uri.toURL();
             HttpURLConnection connection = (HttpURLConnection)url.openConnection();
 
             BufferedReader reader = new BufferedReader(new InputStreamReader(connection.getInputStream()));
 
             StringBuffer json = new StringBuffer(1024);
-            String tmp = "";
+            String tmp;
             while( ( tmp = reader.readLine() ) != null ) {
                 json.append(tmp).append("\n");
             }
@@ -43,6 +48,7 @@ class RemoteFetch {
 
 
         }catch (Exception e) {
+            e.printStackTrace();
             return null;
         }
     }
